update binding for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,7 +9,7 @@ unbind %
 bind v split-window -h
 
 unbind '"'
-bind x split-window -v
+bind s split-window -v
 
 unbind r
 bind r source-file ~/.tmux.conf
