update tmux configuration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,14 @@ set -g default-terminal "screen-256color"
 # if you want to rebind the default "tmux" key
 # set -g prefix C-a
 unbind C-b
+set-option -g prefix C-a
 bind-key C-a send-prefix
+
+# let copying use defauly clipboard
+unbind C-y
+unbind C-p
+bind C-y run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-p run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
 
 # change window splits key
 unbind %
